[package]
name = "clipboard2"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]

[target.'cfg(windows)'.dependencies]
clipboard-win = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.2"
